fix: related product container margin on mobile

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -175,6 +175,7 @@ a.product-form-cart-linker-link
   margin-top: -125px
 
   @media screen and (max-width: $break-medium)
+    margin-top: 0
     padding: 30px 0 60px 0
 
   @media screen and (max-width: $break-small)
